# Spatial2D

./: .gitignore  Cargo.toml  README.md  todo.txt
benches/: direction_benchmarks.rs  matrix_benchmarks.rs
src/: dir.rs  direction.rs  lib.rs  rect.rs  rect_scalar.rs  vec2_traits.rs
src/matrix_module/: algorithms.rs  analysis.rs  iterators.rs  matrix.rs  mod.rs  scaling.rs  transformations.rs
