[package]
name = "spatial2d"
version = "0.1.0"
edition = "2024"

[features]
default = ["glam"]   # default to plain glam
bevy-math = ["bevy"] # enable to use Bevy's math types instead

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[dependencies]
rng = { git = "https://github.com/Liam19/Rng.git" }

glam = { version = "0.29.3", optional = true }
bevy = { version = "0.16.1", default-features = false, optional = true }
# bevy = "0.16.1"

hashbrown = "0.16.0"
itertools = "0.14.0"
priority-queue = "2.5.0"

[[bench]]
name = "matrix_benchmarks"
harness = false
